components/data-viewer/envs/production/data-viewer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-viewer
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: data-viewer
          image: ghcr.io/fiaisis/data-viewer@sha256:77809541c32b26a58e0ec1bc2f114e8847a4310866fe1481474679209a5ac1e2
