components/data-viewer/envs/production/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: data-viewer
  namespace: fia
spec:
  hostnames:
    - "reduce.isis.cclrc.ac.uk"
